--- a/midnight-background.theme.css
+++ b/midnight-background.theme.css
@@ -53,7 +53,7 @@ body {
 
     /* background image options */
     --background-image: on; /* off: no background image, on: enable background image (must set url variable below) */
-    --background-image-url: url('https://cdn.discordapp.com/attachments/1411632617517875263/1452844241972756601/mpv_screenshot_00_00_01_AterisWallpaper.mp4.jpg?ex=694b4a23&is=6949f8a3&hm=a0c37eb9e43544c8aa13ffe14d7559e390788c06a1076285800ebd97f97d594c&'); /* url of the background image */
+    --background-image-url: url('https://github.com/kenkaniff16591-cell/discordthemeingmemes/blob/main/mpv%20screenshot%2000_00_01%20AterisWallpaper.mp4.jpg?raw=true'); /* url of the background image */
 
     /* transparency/blur options */
     /* NOTE: TO USE TRANSPARENCY/BLUR, YOU MUST HAVE TRANSPARENT BG COLORS. FOR EXAMPLE: --bg-4: hsla(220, 15%, 10%, 0.7); */
