--- a/midnight-background.theme.css
+++ b/midnight-background.theme.css
@@ -53,7 +53,7 @@ body {
 
     /* background image options */
     --background-image: on; /* off: no background image, on: enable background image (must set url variable below) */
-    --background-image-url: url('https://github.com/kenkaniff16591-cell/discordthemeingmemes/blob/main/mpv%20screenshot%2000_00_01%20AterisWallpaper.mp4.jpg?raw=true'); /* url of the background image */
+    --background-image-url: url('https://raw.githubusercontent.com/kenkaniff16591-cell/discordthemeingmemes/refs/heads/main/mpv%20screenshot%2000_00_01%20AterisWallpaper.mp4.jpg?token=GHSAT0AAAAAADR3GWY36S5CBC4GLYWKH2622KLF53A'); /* url of the background image */
 
     /* transparency/blur options */
     /* NOTE: TO USE TRANSPARENCY/BLUR, YOU MUST HAVE TRANSPARENT BG COLORS. FOR EXAMPLE: --bg-4: hsla(220, 15%, 10%, 0.7); */
