--- a/midnight-background.theme.css
+++ b/midnight-background.theme.css
@@ -42,7 +42,7 @@ body {
 
     /* dms button options */
     --custom-dms-icon: custom; /* off: use default discord icon, hide: remove icon entirely, custom: use custom icon */
-    --dms-icon-svg-url: url('https://raw.githubusercontent.com/kenkaniff16591-cell/discordthemeingmemes/refs/heads/main/mpv%20screenshot%2000_00_01%20AterisWallpaper.mp4.svg?token=GHSAT0AAAAAADR3GWY2VBP5V2TAJ6VILV722KLF47Q'); /* icon svg url. MUST BE A SVG. */
+    --dms-icon-svg-url: url('https://raw.githubusercontent.com/kenkaniff16591-cell/discordthemeingmemes/724675e4c26496446520e14ffc64b0dad172a18a/mpv%20screenshot%2000_00_01%20AterisWallpaper.mp4.svg'); /* icon svg url. MUST BE A SVG. */
     --dms-icon-svg-size: 90%; /* size of the svg (css mask-size property) */
     --dms-icon-color-before: var(--icon-subtle); /* normal icon color */
     --dms-icon-color-after: var(--white); /* icon color when button is hovered/selected */
